--- a/ike/orb.yml
+++ b/ike/orb.yml
@@ -15,14 +15,19 @@ commands:
             echo "Configured Docker daemon with insecure-registry"
   install_maistra:
     description: |
-      Installs Maistra 0.8.0 (based on OKD 3.11 cluster) on the vm's machine.
+      Installs Maistra on the vm's machine.
+    parameters:
+      version:
+        type: string
+        description: "Valid version of Maistra cli tool - see https://github.com/Maistra/origin/releases/"
+        default: "v3.11.0+maistra-0.8.0"
     steps:
       - run:
-          name: "Installing Maistra Cluster v3.11.0_maistra-0.8.0 "
+          name: "Installing Maistra Cluster << parameters.version >>"
           command: |
             cd ~
 
-            curl -LO https://github.com/Maistra/origin/releases/download/v3.11.0+maistra-0.8.0/istiooc_linux && \
+            curl -LO https://github.com/Maistra/origin/releases/download/<< parameters.version >>/istiooc_linux && \
             chmod +x $PWD/istiooc_linux && mv $PWD/istiooc_linux $PWD/istiooc && sudo mv $PWD/istiooc /usr/local/bin/ && \
             sudo cp /usr/local/bin/istiooc /usr/local/bin/oc
             echo "Installed istiooc\n$(istiooc version)\n"
